--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ body {
 }
 
 .header {
-  position: fixed;
+  position: absolute;
   left: 0;
   top: 0;
   width: 100%;
@@ -116,11 +116,15 @@ body {
   z-index: 16;
 }
 .header:after {
+  content: "";
   width: 0;
+  left: 50%;
+  background: transparent;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .header.scroll {
+  position: fixed;
   height: 90px;
 }
 @media (max-width: 808px) {
@@ -134,7 +138,6 @@ body {
   }
 }
 .header.scroll:after {
-  content: "";
   position: absolute;
   left: 0;
   top: 0;
@@ -142,8 +145,6 @@ body {
   height: 100%;
   background: #FFB800;
   z-index: -1;
-  -webkit-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
 }
 .header.scroll .header__container {
   min-height: 90px;
